inoa-test/src/test/k3s/test/inoa/fleet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleet
spec:
  rules:
    - host: fleet.${k3s.ip}.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleet
                port:
                  name: http
